[build-system]
requires = ["setuptools >= 61.0"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["nornir_shared"]


[project]
name = "nornir_shared"
version = "1.5.1.dev2"
authors = [
  { name="James Anderson", email="James.R.Anderson@utah.edu" },
]
maintainers = [
  { name="Clement Vachet", email="cvachet@sci.utah.edu" },
]
description = "Shared routines for Nornir python packages and scripts"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
	"six",
  "numpy",
  "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = ["curses>=2.2","pydevd>=2.9"]

[project.urls]
Homepage = "https://github.com/clementsan/nornir-shared"
Issues = "https://github.com/clementsan/nornir-shared/issues"
